# paddle-ocr

./: .gitignore  CLAUDE.md  README.md  click.sh  main.py  ocr-server.service  ocr.py  ocr.sh  ocr_server.py  pyproject.toml
