[project]
name = "paddle-ocr"
version = "0.1.0"
description = "PaddleOCR demo project"
requires-python = "==3.10.14"
dependencies = [
    "paddleocr>=3.4.0,<4.0",
    "paddlepaddle>=3.0.0,<3.1",
    "numpy>=2.0",
    "pillow>=12.0",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
